# cameral

src/: Alarm.cpp  Alarm.dpp  CMakeLists.txt  CapPicture.cpp  CapPicture.dpp  CapPicture.h  ConfigParams.cpp  ConfigParams.dpp  GetStream.cpp  GetStream.dpp  Voice.dpp  base64.cpp  base64.dpp  base64.h  consoleMain.cpp  consoleMain.dpp  face.cpp  face.dpp  face.h  kafka_producer.cpp  kafka_producer.dpp  kafka_producer.h  playback.dpp  producer.dpp  tool.cpp  tool.dpp
